--- a/views/planner/plannerContent.html
+++ b/views/planner/plannerContent.html
@@ -1,18 +1,4 @@
- <div class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle journeybutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu journeyslist">
-  </ul>
-</div>
-<div class="dropdown">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    Favorites
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" id="searchResults" aria-labelledby="dropdownMenu1">
-  </ul>
-</div>
+
   <!-- input for Journey's captions,name,days,  -->
   <!-- number of days selections -->
 <div>
@@ -20,15 +6,37 @@
   <span id="currentDay">1</span>
   <span id="nextDay" class="glyphicon glyphicon-triangle-right">
   </span>
-</div>    
+</div>   
+
 <div class='glyphicon glyphicon-triangle-right nextButton'></div>
+
+
  <!-- panels for directions, maps, and directions   -->
 <div class="container">
-<div id="sortPanel">
-</div>
-<div class="map_favorites">
-<div class ="container" id="map"></div>
-<div id="directionsText"></div>
+  
+  
+  <div class="sidebar">
+
+   <div class="btn-group"><span class="glyphicon glyphicon-folder-open"></span>
+      <span type="button" class=" dropdown-toggle journeybutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <span class="caret"></span>
+      </span>
+      <ul class="dropdown-menu journeyslist">
+      </ul>
+    </div>
+    
+      <ul id="favorites">
+      <span class="glyphicon glyphicon-heart"></span>favorites
+      </ul>
+      
+  </div>    
+  
+    <div id="sortPanel">
+    </div>
+    
+    <div class="map_favorites">
+    <div class ="container" id="map"></div>
+    <div id="directionsText"></div>
 </div>
 </div>
 
