--- a/views/planner/plannerStyle.css
+++ b/views/planner/plannerStyle.css
@@ -68,12 +68,54 @@
          border-radius:5px;
          width:110px;
       }
+     .sidebar{
+       display:inline-block; 
+       width:150px;
+       border-right-width:1px;
+       border-color:#808080;
+       border-right-style:solid;
+     }
+     btn-group{
+         font-size:12px;
+     }
+     #favorites{
+         margin-top:10px;
+        list-style: none;
+        padding-left:0px;
+     }
+      .glyphicon-heart{
+         color:	#F08080;
+         margin-right: 5px;
+     }
+     .glyphicon-folder-open{
+        color: #20B2AA;
+        margin-right: 5px;
+     }
+     .favoritesLists{
+        color: #808080;
+        font-size:10px;
+        list-style: none;
+        padding: 5px 5px 5px 15px;
+     }
+       .favoritesLists:hover{
+        font-size:12px; 
+        color:black;
+        background-color:#e6e6e6;
+     }
       #sortPanel{
+        vertical-align:top;
+        display:inline-block;
         height:800px;
-        width:45%;
+        width:500px;
         min-width:450px;
-        float:left;
       }
+      .map_favorites{
+          vertical-align:top;
+          width:400px;
+          height:500px;
+          margin-left:15px;
+          display:inline-block;
+     }
       .ToDo{ 
         height:150px;
 
@@ -117,14 +159,6 @@
        margin-top:3px;
      }
      
-     .map_favorites{
-      float:left;
-      width:50%;
-      min-width:300px;
-      height:500px;
-      margin-left:15px;
-     }
-     
      #directionsText{
       margin-top:10px;
       height:80%;
@@ -134,9 +168,6 @@
      #Routes{
          height:50px;
          width:130px;
-     }
-     .dropdown{
-         display:inline;
      }
      .nextButton{
          position: fixed;
