--- a/views/planner/plannerContent.ejs
+++ b/views/planner/plannerContent.ejs
@@ -1,39 +1,41 @@
 
-  <!-- input for Journey's captions,name,days,  -->
-  <!-- number of days selections -->
-<div>
-  <span id="previousDay" class="glyphicon glyphicon-triangle-left"></span>day
-  <span id="currentDay">1</span>
-  <span id="nextDay" class="glyphicon glyphicon-triangle-right">
-  </span>
-</div>   
-
-<div class='glyphicon glyphicon-triangle-right nextButton'></div>
-
 
  <!-- panels for directions, maps, and directions   -->
 <div class="container">
   
   
   <div class="sidebar">
-
-   <div class="btn-group"><span class="glyphicon glyphicon-folder-open"></span>
+    
+ <div class="btn-group"><span class="glyphicon glyphicon-folder-open"></span>
       <span type="button" class=" dropdown-toggle journeybutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="caret"></span>
       </span>
       <ul class="dropdown-menu journeyslist">
       </ul>
     </div>
+        
+        
+<p class="captions"></p>
+
     
+  <!-- number of days selections -->
+<div class="daySelection">
+  <span id="previousDay" class="glyphicon glyphicon-triangle-left"></span>day
+  <span id="currentDay">1</span>
+  <span id="nextDay" class="glyphicon glyphicon-triangle-right">
+  </span>
+</div> 
+  
       <ul id="favorites">
       <span class="glyphicon glyphicon-heart"></span>favorites
       </ul>
       
   </div>    
-  
+
+<div class='glyphicon glyphicon-triangle-right nextButton'></div>
     <div id="sortPanel">
     </div>
-    
+
     <div class="map_favorites">
     <div class ="container" id="map"></div>
     <div id="directionsText"></div>
