--- a/views/planner/plannerStyle.css
+++ b/views/planner/plannerStyle.css
@@ -70,15 +70,32 @@
       }
      .sidebar{
        display:inline-block; 
-       width:150px;
+       width:170px;
        border-right-width:1px;
        border-color:#808080;
        border-right-style:solid;
      }
-     btn-group{
+     .btn-group{
          font-size:12px;
      }
+     
+    .btn-group:hover{
+        background-color:#e6e6e6;
+        font-size:14px; 
+    }
+    
+     
+     .daySelection{
+         margin-left:40px;
+     }
+     
+     .daySelection:hover{
+        background-color:#e6e6e6;
+        font-size:16px;   
+     }
+     
      #favorites{
+         margin-left:40px;
          margin-top:10px;
         list-style: none;
         padding-left:0px;
@@ -101,6 +118,18 @@
         font-size:12px; 
         color:black;
         background-color:#e6e6e6;
+     }
+     .captions{
+        color: #808080;
+        font-size:10px;
+     }
+     .captions:hover{
+
+        color:#87ceeb;
+        font-size:12px; 
+     }
+     .editCaptions{
+         border-width: 0px 0px 1px 0px;
      }
       #sortPanel{
         vertical-align:top;
