--- a/views/planner/plannerContent.ejs
+++ b/views/planner/plannerContent.ejs
@@ -15,7 +15,7 @@
     </div>
         
         
-<p class="captions"></p>
+<p id="classSelector" class="captions"></p>
 
     
   <!-- number of days selections -->
