--- a/views/planner/plannerContent.ejs
+++ b/views/planner/plannerContent.ejs
@@ -15,7 +15,7 @@
     </div>
         
         
-<p id="classSelector" class="captions"></p>
+<p id="classSelector" class="captions" data-toggle="tooltip" title="Edit Captions"></p>
 
     
   <!-- number of days selections -->
@@ -32,7 +32,7 @@
       
   </div>    
 
-<div class='glyphicon glyphicon-triangle-right nextButton'></div>
+<div class='glyphicon glyphicon-triangle-right nextButton' data-toggle="tooltip" title="Publish Journey!"></div>
     <div id="sortPanel">
     </div>
 
