--- a/views/planner/plannerContent.ejs
+++ b/views/planner/plannerContent.ejs
@@ -6,7 +6,7 @@
   
   <div class="sidebar">
     
- <div class="btn-group"><span class="glyphicon glyphicon-folder-open"></span>
+ <div class="btn-group"><span class="fa fa-map"></span>
       <span type="button" class=" dropdown-toggle journeybutton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <span class="caret"></span>
       </span>
