--- a/views/search/searchStyle.css
+++ b/views/search/searchStyle.css
@@ -43,6 +43,11 @@
       .glyphicon-heart{
           color:red;
       }
+      .glyphicon:hover{
+          color:red;
+          cursor: pointer;
+      }
+      
       #search{
         float:left;
       }
