--- a/views/frontPage/landingPage.ejs
+++ b/views/frontPage/landingPage.ejs
@@ -2,41 +2,18 @@
 <style type="text/css">
 <%include landingPage.css%>
 </style>
+<script>
 
-<div class="container">
-  <%if(error && error.length){%>
-  <div class="alert alert-danger" id="sucessFlash" role="alert"><%= error %></div>
-  <% } %>
-  <div class="jumbotron" >
-    
-    <h1>Adventures is out there</h1>
-    <p>Plan and Share your adventures with Journey</p>
-    <a href="/newJourney" type="button" class="btn btn-default navbar-btn">Create journeys</a>
-   </div>
-  
-<% journey.forEach(function(selectedJourney){ %>
-   <% var journame = selectedJourney.journeyName%>  
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-   <% var imagelen =  images[journame].length %>
-   <% if(imagelen > 6){ %>
-        <%for( var x = 0 ; x < 6 ; x++){ %>
-        <img class="thumbimage" src=<%=images[journame][x]%> alt="...">
-        <% } %>
-        <% }else{ %>
-            <%  images[journame].forEach(function(images){ %>
-                <img class="thumbimage" src=<%=images%> alt="...">
-            <% });%>
-          <% }  %>
-          
-      <div class="caption">
-        <h3><%= selectedJourney.journeyName%></h3>
-        <p><%= selectedJourney.caption%></p>
-        <p><%= selectedJourney.caption%></p>
-      </div>
-    </div>
-  </div>
-<% }) %>
+$(".glyphicon-thumbs-up").on("click",function(){
+    $(this).css("color:#3B5998")
+})
 
-<% include ../partials/footer %>
 
+
+
+ 
+</script>
+
+
+
+<%include landingPageContent.ejs%>
