--- a/views/frontPage/landingPageContent.ejs
+++ b/views/frontPage/landingPageContent.ejs
@@ -8,31 +8,57 @@
     <p>Plan and Share your adventures with Journey</p>
     <a href="/newJourney" type="button" class="btn btn-default navbar-btn">Create journeys</a>
    </div>
+   
+<%if(journey.length > 0){%>
+  <% journey.forEach(function(selectedJourney){ %>
+     <% var journame = selectedJourney.journeyName%>  
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+     <% var imagelen =  images[journame].length %>
+     <% if(imagelen > 6){ %>
+          <%for( var x = 0 ; x < 6 ; x++){ %>
+          <img class="thumbimage" src=<%=images[journame][x]%> alt="...">
+          <% } %>
+          <% }else{ %>
+              <%  images[journame].forEach(function(images){ %>
+                  <img class="thumbimage" src=<%=images%> alt="...">
+              <% });%>
+            <% }  %>
+        <div class="caption" id="<%= selectedJourney.id%>">
+          <h3><%= selectedJourney.journeyName%></h3>
+          <p><%= selectedJourney.caption%></p>
+          <p class="user_buttons" ><span>-<%= selectedJourney.userName%></span>
+          	&nbsp	&nbsp	&nbsp<span class="fa fa-map" data-toggle="tooltip" title="Add Journey to Planner!">Save</span>
   
-<% journey.forEach(function(selectedJourney){ %>
-   <% var journame = selectedJourney.journeyName%>  
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-   <% var imagelen =  images[journame].length %>
-   <% if(imagelen > 6){ %>
-        <%for( var x = 0 ; x < 6 ; x++){ %>
-        <img class="thumbimage" src=<%=images[journame][x]%> alt="...">
-        <% } %>
-        <% }else{ %>
-            <%  images[journame].forEach(function(images){ %>
-                <img class="thumbimage" src=<%=images%> alt="...">
-            <% });%>
-          <% }  %>
-          
-      <div class="caption">
-        <h3><%= selectedJourney.journeyName%></h3>
-        <p><%= selectedJourney.caption%></p>
-        <p class="user_buttons" ><span>-<%= selectedJourney.userName%></span>
-        	&nbsp	&nbsp	&nbsp<span class="fa fa-map" data-toggle="tooltip" title="Add Journey to Planner!"></span>
-      		&nbsp<span class="fa fa-thumbs-up" aria-hidden="true" data-toggle="tooltip" title="Like Journey!"></span>
-      		&nbsp<span class="fa fa-comment" data-toggle="tooltip" title="Write a comment!"></span>
-        </p>
+            <% var index=selectedJourney.likes.map(function(likes){return likes.id}).indexOf(user.id)%>
+            <% var thumbColor = "#b3b3b3"; %>
+              <% if(index !=-1){ %>
+              <%  thumbColor = "#0074D9"%>
+              <%   } %>
+        		&nbsp<span style="color:<%=thumbColor%>" class="fa fa-thumbs-up" aria-hidden="true" data-toggle="tooltip" title="Like Journey!">Like</span>
+        		&nbsp<span class="fa fa-comment" data-toggle="tooltip" title="Write a comment!">Comment</span>
+        		<div><span  class="fa fa-thumbs-up" data-toggle="modal" data-target="#likedModal"><%=selectedJourney.likes.length%>
+        		</span>
+        		</div>
+          </p>
+        </div>
+      </div>
+    </div>
+  <% }) %>
+<% }%>
+
+<div class="modal fade bs-example-modal-sm" id="likedModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Likes</h4>
+      </div>
+      <div class="modal-body">
+      <%  selectedJourney.likes.forEach(function(users){ %>
+        <div><%= users.username %></div>
+      <%  });  %>
       </div>
     </div>
   </div>
-<% }) %>
+</div>
+        		
